--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ nav li {
   margin-left: 1em;
   margin-top: 2em;
 }
-nav li:nth-child(6) {
+nav li:nth-child(5) {
   margin-left: auto;
 }
 nav a {
@@ -112,8 +112,12 @@ form button:hover {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../image/Three-beautiful-Chinese-girls-retro-style-colorful-lanterns_1920x1440.jpg");
   background-position: center;
   background-size: cover;
+  min-height: 100vh;
   height: auto;
   padding: 50px;
+}
+#lanterne h2 {
+  padding-bottom: 20px;
 }
 
 #lanternes_list {
@@ -122,8 +126,8 @@ form button:hover {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  padding-top: 10px;
+  gap: 30px;
+  padding-top: 40px;
 }
 #lanternes_list article {
   padding-bottom: 2rem;
@@ -134,6 +138,14 @@ form button:hover {
 }
 #lanternes_list h3 {
   font-size: 20px;
+}
+
+.lanterneArticle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 * {
@@ -158,10 +170,14 @@ main {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 400px;
+  top: 800px;
   background: rgba(255, 200, 186, 0.511);
   display: flex;
   justify-content: space-around;
+}
+
+.mainSpe {
+  height: 100vh;
 }
 
 #divArticle {
@@ -235,15 +251,15 @@ main {
 }
 
 #histoire {
-  padding-top: 400px;
+  padding-top: 300px;
   padding-bottom: 100px;
 }
 #histoire img {
-  width: 800px;
+  width: 1000PX;
 }
 #histoire article {
   display: flex;
-  flex-direction: row;
+  justify-content: space-around;
 }
 
 .txtHistoire {
@@ -252,7 +268,7 @@ main {
   flex-direction: column;
   justify-content: center;
   gap: 50px;
-  width: 500px;
+  width: 600px;
 }
 .txtHistoire p {
   font-size: 25px;
@@ -282,4 +298,98 @@ h3 {
   padding: 5px;
   background: rgba(255, 200, 186, 0.845);
   text-align: center;
+}
+
+#lanterneSoloMain {
+  height: 100vh;
+}
+
+#lanterneSoloSection {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+#lanterneSolo {
+  width: 25%;
+  border: 1px solid black;
+  padding: 5px;
+  background: rgba(255, 200, 186, 0.845);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#lanterneSolo img {
+  width: auto;
+}
+#lanterneSolo a {
+  background-color: gold;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
+  width: 100px;
+}
+
+#commentaire {
+  padding: 5px;
+  background: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  position: relative;
+  width: 300px;
+}
+#commentaire p:last-child:after {
+  content: "";
+  border: 1px solid black;
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+}
+
+.dNone {
+  display: none;
+}
+
+#btnD {
+  cursor: pointer;
+}
+
+#btnD:hover {
+  scale: 130%;
+  font-weight: bold;
+}
+
+.btnD {
+  background-color: gold;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.btnD:hover {
+  background-color: red;
+  color: gold;
+}
+
+.btn-add {
+  background-color: gold;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 40px;
 }/*# sourceMappingURL=style.css.map */
