--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -27,11 +27,15 @@ main{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 400px;
+    top: 800px;
     background: rgba(255, 200, 186, 0.511);
     display: flex;
     justify-content: space-around;
    
+}
+
+.mainSpe{
+    height: 100vh;
 }
 
 #divArticle{
@@ -91,14 +95,17 @@ main{
    
 
 #histoire{
-    padding-top: 400px;
+    padding-top: 300px;
     padding-bottom: 100px;
     img{
-        width: 800px;
+        width: 1000PX;
     }
  article{
     display: flex;
-    flex-direction: row;
+    justify-content: space-around;
+  
+    
+  
   
  }
 }
@@ -109,7 +116,7 @@ main{
     flex-direction: column;
     justify-content: center;
     gap: 50px;
-    width: 500px;
+    width: 600px;
 
     p{
         font-size: 25px;
@@ -146,3 +153,104 @@ h3{
     text-align: center;
 }
 
+// LANTERNE SOLO //
+
+#lanterneSoloMain{
+    height: 100vh;
+}
+#lanterneSoloSection{
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+#lanterneSolo{
+    width: 25%;
+    border: 1px solid black;
+    padding: 5px;
+    background: rgba(255, 200, 186, 0.845);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+    
+    img{
+        width: auto;
+        
+    }
+
+    a{
+        background-color: gold;
+        border: 1px solid black;
+        color: black;
+        font-weight: bold;
+        padding: 5px;
+        border-radius: 5px;
+        width: 100px;
+    }
+}
+
+#commentaire{
+    padding: 5px;
+    background: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    position: relative;
+    width: 300px;
+
+    p:last-child:after{
+        content: "";
+        border: 1px solid black;
+        position: absolute;
+        left: 0;
+        bottom: 0px;
+        width: 100%;
+    }
+   
+}
+
+.dNone{
+    display: none;
+    
+}
+
+
+#btnD{
+    cursor: pointer;
+}
+#btnD:hover{
+    scale: 130%;
+    font-weight: bold;
+}
+// BTN //
+.btnD{
+    background-color: gold;
+    border: 1px solid black;
+    color: black;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.btnD:hover{
+    background-color: red;
+    color: gold;
+}
+
+
+.btn-add{
+    background-color: gold;
+    border: 1px solid black;
+    color: black;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40px;
+}
